# Kowo-Agent

./: .editorconfig  .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
agent/: Invoke-Inventory.ps1  Invoke-InventoryDebug.ps1
agent/deploy/: Install-InventoryTask.ps1  Inventory-ScheduledTask.xml  README-Deployment.md  Remove-StaleInventory.ps1
app/: package.json
app/src/: app-panels.js  app.js  index.html  mock.js  view-model.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: audit.toml
app/src-tauri/src/: ad.rs  ad_users.rs  ad_users_tests.rs  commands.rs  commands_tests.rs  export.rs  golden_tests.rs  identity.rs  lib.rs  model.rs  store.rs  upgrade.rs
app/src-tauri/src/store/: assignments.rs  common.rs  config.rs  facts.rs  inventory.rs  io_tests.rs  merge.rs  overview.rs  overview_tests.rs  tests.rs
app/tests/: view-model.test.js
shared/docs/: SETUP.md
shared/sample-data/: New-SampleData.ps1  config.json
shared/sample-data/Inventory/: WS-BUCH-02.json  WS-BUCH-05.json  WS-EMPFANG-01.json  WS-ENTW-09.json  WS-ENTW-15.json  WS-ENTW-21.json  WS-GF-01.json  WS-IT-02.json  WS-IT-07.json  WS-LAGER-01.json  WS-MARKETING-04.json  WS-MARKETING-06.json  WS-PERSONAL-03.json  WS-VERTRIEB-08.json  WS-VERTRIEB-11.json  WS-VERTRIEB-14.json
shared/sample-data/control/: assignments.json
shared/schema/: inventory.schema.json
shared/test-vectors/: upgrade-cases.json
