[package]
name = "hardview"
version = "1.0.0"
description = "HardView — Hardware-Inventar & Asset-Zuordnung"
authors = ["HardView"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "hardview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
csv = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_Security_Authentication_Identity",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
